--- a/course-06/packages/index.html
+++ b/course-06/packages/index.html
@@ -14,6 +14,8 @@
   </head>
 
   <body>
+    <div class="background"></div>
+
     <header class="main-header">
       <div>
         <a href="../index.html" class="main-header__brand"> uHost </a>
@@ -36,6 +38,7 @@
       <section class="package" id="plus">
         <a href="#">
           <h1 class="package__title">Our PLUS Plan</h1>
+          <h2 class="package__badge">RECOMMEND</h2>
           <h2 class="package__subtitle">
             The most popular choice of our customers.
           </h2>
